@startuml DataModel
skinparam classAttributeIconSize 0

abstract class BaseObject {
  +parent: ComplexInstance
  +_id: UUID
  +_name: String <<transient>>
  +_hash_name: String
  +attribute_dict: AttributeDict
  --
  +id: UUID <<virtual, persistent, readonly>>
  +name: String <<virtual, writable>>
  +hash_name: String <<virtual, persistent, readonly>>
  +created_at: DateTime <<virtual, readonly>>
  +updated_at: DateTime <<virtual, readonly>>
  +path: String <<virtual, readonly>>
  +set_name(name: String): void
  +_refresh_hash_name(): void
  +get(key: String): Any
  +set(key: String, value: Any): void
}

abstract class LocatableInstance {
  +position: Point2D
  +size: Size2D
  --
  +x: float <<virtual, writable>>
  +y: float <<virtual, writable>>
  +set_xy(pos: Point2DOrTuple): void
}

class ElementaryInstance {
  +type_key: String
  +in_pins: PinList
  +out_pins: PinList
}

class Variable {
  +value: Any
  +unit: String
}

class BasicOperator {
  +operation: BasicOperatorType
}

class ComplexInstance {
  +children: BaseObjectList
  +children_by_hash_name: HashNameMap
  --
  +paste(obj: BaseObject): void
  +del(id: UUID): void
  +get_child(ref: String): BaseObject
}

class Connector {
  +source_instance_id: UUID
  +source_pin: String
  +target_instance_id: UUID
  +target_pin: String
  +directed: bool
  --
  +validate_endpoints(): bool
}

class Pin {
  +name: String
  +direction: PinDirection
  +data_type: String
}

class Point2D {
  +x: float
  +y: float
}

class Size2D {
  +width: float
  +height: float
}

enum PinDirection {
  IN
  OUT
}

enum BasicOperatorType {
  PLUS
  MINUS
  MULTIPLY
  DIVIDE
}

note right of BasicOperatorType
  PLUS      = "+"
  MINUS     = "-"
  MULTIPLY  = "*"
  DIVIDE    = "/"
end note

class AttributeDict {
  +get(key: String): Any
  +set(key: String, value: Any): void
  +set_virtual(key: String, getter: Callable, setter: Callable): void
  +virtual(key: String): bool
  +exposed(key: String): bool
  +writable(key: String): bool
}

BaseObject <|-- LocatableInstance
LocatableInstance <|-- ElementaryInstance
LocatableInstance <|-- ComplexInstance
ElementaryInstance <|-- Variable
ElementaryInstance <|-- BasicOperator
BaseObject <|-- Connector

ComplexInstance *-- BaseObject
ElementaryInstance *-- Pin
BaseObject *-- AttributeDict
Connector --> ElementaryInstance

@enduml

